
[TestProp/should_include_value_in_props_on_full_request - 1]
{
 "component": "TestComponent",
 "props": {
  "age": 30,
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_emit_merge_match-on_metadata_when_MergeKey_is_configured - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "posts.id",
  "notifications.uuid",
  "conversation.messages.id"
 ],
 "mergeProps": [
  "posts",
  "conversation.messages"
 ],
 "prependProps": [
  "notifications"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  },
  "notifications": [
   "one"
  ],
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_mergeProps_when_WithMerge_is_set - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "mergeable"
 ],
 "props": {
  "mergeable": {
   "key": "val"
  },
  "normal": "value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_respect_partial_blacklist_when_partial_component_matches - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_respect_partial_whitelist_when_partial_component_matches - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_onceProps_when_WithOnce_is_set - 1]
{
 "component": "TestComponent",
 "onceProps": {
  "once_key": {
   "prop": "onceable"
  }
 },
 "props": {
  "onceable": "secret",
  "regular": "value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_suppress_mergeProps_and_matchPropsOn_for_reset_keys_while_still_returning_the_value - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman",
  "posts": [
   "fresh"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_treat_MergeKey_with_only_matchOn_as_a_matchOn-only_directive_at_root - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "posts.id"
 ],
 "mergeProps": [
  "posts"
 ],
 "props": {
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_mergeProps_with_NewMergeAppend_for_root-only_append - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "posts"
 ],
 "props": {
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_prependProps_with_NewMergePrepend_for_root-only_prepend - 1]
{
 "component": "TestComponent",
 "prependProps": [
  "notifications"
 ],
 "props": {
  "notifications": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_prependProps_with_NewPrependRoot_for_root-only_prepend - 1]
{
 "component": "TestComponent",
 "prependProps": [
  "notifications"
 ],
 "props": {
  "notifications": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_treat_matchOn-only_as_root-level_append_with_NewAppendRoot - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "posts.id"
 ],
 "mergeProps": [
  "posts"
 ],
 "props": {
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_mergeProps_with_NewAppendRoot_for_root-only_append - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "mergeable"
 ],
 "props": {
  "mergeable": {
   "key": "val"
  },
  "normal": "value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_emit_merge_match-on_metadata_for_root_and_path_configs - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "posts.id",
  "notifications.uuid",
  "conversation.messages.id"
 ],
 "mergeProps": [
  "posts",
  "conversation.messages"
 ],
 "prependProps": [
  "notifications"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  },
  "notifications": [
   "one"
  ],
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_mergeProps_with_NewAppendRoot_for_root-only_append#01 - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "posts"
 ],
 "props": {
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---
